tests/ui/skip_async.stderr
error[E0599]: no method named `fetch` found for reference `&dyn Dyn` in the current scope
  --> tests/ui/skip_async.rs:23:15
   |
23 |     let _ = d.fetch();
   |               ^^^^^ method not found in `&dyn Dyn`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
note: `Src` defines an item `fetch`, perhaps you need to implement it
  --> tests/ui/skip_async.rs:5:1
   |
 5 | trait Src {
   | ^^^^^^^^^
